# halide-apriltag

./: .gitignore  CMakeLists.txt  Makefile  apriltag_timing.cpp  halide_threshold.cpp  halide_threshold.h
apriltag/: apriltag.c  apriltag.h  apriltag_quad_thresh.c
generator/: GenGen.cpp  Makefile  RunGen.h  halide_benchmark.h  halide_generator.cpp  halide_image_io.h
